<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/marco" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".85"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/dialogo_datos_tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/dialogo_gps_titulo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gris_claro" />
           
            
            <ScrollView 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                >

            <TextView
                android:id="@+id/dialogo_datos_tv_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:gravity="left"
                android:text="@string/dialogo_gps_texto" />
            </ScrollView>

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />
        </LinearLayout>

            <Button
                android:id="@+id/dialogo_datos_btn_aceptar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".15"
                android:background="@drawable/selector_btn_generic"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dialogo_gps_aceptar"
                android:textColor="@drawable/selector_txt_boton_redondo" >
            </Button>

    </LinearLayout>

</FrameLayout>